Removed TODO completed and cleaned code